メインとなるレイアウト作成

--- a/laravel-src/public/test.html
+++ b/laravel-src/public/test.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ja">
+<html lang="ja" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -26,54 +26,90 @@
 <body>
     <!-- Wrapper -->
     <div class="min-vh-100 bg-light">
-        <!-- Nav start -->
-        <nav class="navbar bg-body-tertiary fixed-top">
-            <div class="container-fluid">
-                <!-- ロゴ -->
-                <a class="navbar-brand" href="#">ロゴ</a>
-                <!-- ハンバーガーメニュー -->
-                <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <!-- 隠しメニュー -->
-                <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
-                    <div class="offcanvas-header">
-                        <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Offcanvas</h5>
-                        <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-                    </div>
-                    <div class="offcanvas-body">
-                        <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-                            <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="#">Home</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">Link</a>
-                            </li>
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                    Dropdown
-                                </a>
-                                <ul class="dropdown-menu">
-                                    <li><a class="dropdown-item" href="#">Action</a></li>
-                                    <li><a class="dropdown-item" href="#">Another action</a></li>
-                                    <li>
-                                        <hr class="dropdown-divider">
-                                    </li>
-                                    <li><a class="dropdown-item" href="#">Something else here</a></li>
-                                </ul>
-                            </li>
-                        </ul>
-                        <form class="d-flex mt-3" role="search">
-                            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                            <button class="btn btn-outline-success" type="submit">Search</button>
-                        </form>
+        <header>
+            <!-- Nav start -->
+            <nav class="navbar bg-white border-bottom sticky-top shadow-sm">
+                <div class="container-fluid">
+                    <!-- 戻る -->
+                    <div>&lt;</div>
+                    <!-- ロゴ -->
+                    <a class="navbar-brand me-0" href="#">ロゴ</a>
+                    <!-- ハンバーガーメニュー -->
+                    <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <!-- 隠しメニュー -->
+                    <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+                        <div class="offcanvas-header">
+                            <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Offcanvas</h5>
+                            <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                        </div>
+                        <div class="offcanvas-body">
+                            <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                                <li class="nav-item">
+                                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#">Link</a>
+                                </li>
+                                <li class="nav-item dropdown">
+                                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                        Dropdown
+                                    </a>
+                                    <ul class="dropdown-menu">
+                                        <li><a class="dropdown-item" href="#">Action</a></li>
+                                        <li><a class="dropdown-item" href="#">Another action</a></li>
+                                        <li>
+                                            <hr class="dropdown-divider">
+                                        </li>
+                                        <li><a class="dropdown-item" href="#">Something else here</a></li>
+                                    </ul>
+                                </li>
+                            </ul>
+                            <form class="d-flex mt-3" role="search">
+                                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                                <button class="btn btn-outline-success" type="submit">Search</button>
+                            </form>
+                        </div>
                     </div>
                 </div>
-            </div>
-        </nav>
-        <!-- Nav end -->
+            </nav>
+            <!-- Nav end -->
+        </header>
+        <!-- main -->
         <main>
+            aaa
         </main>
+        <footer>
+            <!-- 固定 フッターメニュー -->
+            <div class="row w-full bg-dark text-white fixed-bottom">
+                <!-- 各フッターメニュー -->
+                <div class="col p-2">
+                    <a class="text-white text-decoration-none d-flex flex-column align-items-center">
+                        <i class="fa-solid fa-clock fw-bold"></i>
+                        <small class="mt-1">ホーム</small>
+                    </a>
+                </div>
+                <div class="col p-2">
+                    <a class="text-white text-decoration-none d-flex flex-column align-items-center">
+                        <i class="fa-solid fa-cart-shopping fw-bold"></i>
+                        <small class="mt-1">購入</small>
+                    </a>
+                </div>
+                <div class="col p-2">
+                    <a class="text-white text-decoration-none d-flex flex-column align-items-center">
+                        <i class="fa-solid fa-circle-info fw-bold"></i>
+                        <small class="mt-1">お知らせ</small>
+                    </a>
+                </div>
+                <div class="col p-2">
+                    <a class="text-white text-decoration-none d-flex flex-column align-items-center">
+                        <i class="fa-solid fa-circle-user fw-bold"></i>
+                        <small class="mt-1">プロフィール</small>
+                    </a>
+                </div>
+            </div>
+        </footer>
     </div>
 </body>
 </html>
